--- a/index.html
+++ b/index.html
@@ -107,16 +107,16 @@
   <!-- category end -->
   <!-- product section start  -->
   <div class="container-fluid">
-    <h1 class="headings " id="product">Products</h1>
+    <h1 class="headings " id="product"  data-aos="zoom-in">Products</h1>
     <div class="row">
-      <div class="col-4 col-md-3 col-lg-2 p-4">
+      <div class="col-4 col-md-3 col-lg-2 p-4" data-aos="fade-up">
         <img src="img/red-rose.PNG" class="img-fluid" alt="">
         <p style="font-size: small;">Red Rose Bouquet</p>
         <span><b>$95</b></span><br>
         <button class="button"><i class="fa-solid fa-cart-shopping"></i>&nbsp; Add</button>
 
       </div>
-      <div class="col-4 col-md-3 col-lg-2 p-4">
+      <div class="col-4 col-md-3 col-lg-2 p-4" data-aos="fade-down">
         <img src="img/classic.PNG" class="img-fluid" alt="">
         <p style="font-size: small;">Classic Bouquet</p>
         <span><b>$75</b></span><br>
@@ -124,14 +124,14 @@
 
       </div>
 
-      <div class="col-4 col-md-3 col-lg-2  p-4">
+      <div class="col-4 col-md-3 col-lg-2  p-4" data-aos="fade-up">
         <img src="img/fresh-flower.PNG" class="img-fluid" alt="">
         <p style="font-size: small;">Fresh Flowers</p>
         <span><b>$95</b></span><br>
         <button class="button"><i class="fa-solid fa-cart-shopping"></i>&nbsp; Add</button>
 
       </div>
-      <div class="col-4 col-md-3 col-lg-2  p-4">
+      <div class="col-4 col-md-3 col-lg-2  p-4" data-aos="fade-down">
         <img src="img/tulip.PNG" class="img-fluid" alt="">
         <p style="font-size: small;">Tulip Flowers</p>
         <span><b>$115</b></span><br>
@@ -139,7 +139,7 @@
 
       </div>
 
-      <div class="col-4 col-md-3 col-lg-2  p-4">
+      <div class="col-4 col-md-3 col-lg-2  p-4" data-aos="fade-up">
         <img src="img/art-daffodil.PNG" class="img-fluid" alt=""><br>
         <p style="font-size: small;">Artificial Daffodil</p>
         <span><b>$105</b></span><br>
@@ -147,7 +147,7 @@
 
       </div>
 
-      <div class="col-4 col-md-3 col-lg-2  p-4">
+      <div class="col-4 col-md-3 col-lg-2  p-4" data-aos="fade-down">
         <img src="img/pink.PNG" class="img-fluid" alt="">
         <p style="font-size: small;"> Proteas Flowers</p>
         <span><b>$95</b></span><br>
@@ -163,11 +163,11 @@
   </div><br><br>
   <!-- product section end -->
   <!-- about section start  -->
-  <div class="container-fluid">
+  <div class="container-fluid"> 
     <div class="row">
-      <div class="col-12 col-md-6 col-lg-6 p-4"
+      <div class="col-12 col-md-6 col-lg-6 p-4" data-aos="fade-right"
         style="background-image: url(img/back-img.PNG);background-repeat: no-repeat;background-position: center;background-size: cover;">
-        <h1 class="headings " id="about">About Us</h1>
+        <h1 class="headings " id="about"  data-aos="zoom-in">About Us</h1>
         <p> We are passionate about bringing the freshest and most vibrant flowers to our customers, creating stunning
           arrangements for every occasion. Whether you’re celebrating a wedding, anniversary, or simply expressing love,
           our expertly crafted bouquets are designed to convey your emotions in the most beautiful way.
@@ -180,16 +180,16 @@
           committed to bringing nature's elegance into your life.
         </p>
       </div>
-      <div class="col-12 col-md-6 col-lg-6"><img src="img/about.PNG" class="img-fluid" alt=""></div>
+      <div class="col-12 col-md-6 col-lg-6" data-aos="fade-left"><img src="img/about.PNG" class="img-fluid" alt=""></div>
     </div>
   </div>
   <!-- about section end -->
   <!-- gallery section start  -->
   <div class="container">
-    <h1 class="headings " id="gallery">Gallery</h1>
+    <h1 class="headings " id="gallery"  data-aos="zoom-in">Gallery</h1>
     <br>
 
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-aos="zoom-out-up">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="img/gallery-1.webp" class="d-block img-fluid" style="height: 400px !important; width: 100%;"
@@ -218,28 +218,28 @@
   <!-- gallery section end -->
   <!-- services section start  -->
   <div class="container-fluid">
-    <h1 class="headings " id="service">Services</h1>
+    <h1 class="headings " id="service"  data-aos="zoom-in">Services</h1>
     <div class="row">
-      <div class="col-6 col-md-6 col-lg-3 card text-center">
+      <div class="col-6 col-md-6 col-lg-3  card text-center" data-aos="fade-up">
         <img src="img/service-1.PNG" class="img-fluid" alt="">
         <h5 class="heading">Decoration for Banquet Hall</h5>
         <p>Be it any occasion, we have amazing ideas to decorate banquet halls.</p>
         <button class="button">Enquire Now</button>
       </div>
-      <div class="col-6 col-md-6 col-lg-3 card text-center">
+      <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-down">
         <img src="img/service-2.PNG" class="img-fluid" alt="">
         <h5 class="heading">Decoration for Cars</h5>
         <p>We decorate your cars beautifully that it looks just the way you want.</p>
         <button class="button">Enquire Now</button>
       </div>
-      <div class="col-6 col-md-6 col-lg-3 card text-center">
+      <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-up">
         <img src="img/dryflower-decor.PNG" class="img-fluid" alt="">
         <h5 class="heading">Decoration for Dry Flowers</h5>
         <p>We provide unique concept of dry flower decoration also.</p>
         <button class="button">Enquire Now</button>
       </div>
 
-      <div class="col-6 col-md-6 col-lg-3 card text-center">
+      <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-down">
         <img src="img/service-4.PNG" class="img-fluid" alt="">
         <h5 class="heading">Decoration for Stage</h5>
         <p>We also provide stage decoration services for all your events.</p>
@@ -247,25 +247,25 @@
       </div>
     </div>
     <div class="row mt-5">
-      <div class="col-6 col-md-6 col-lg-3 card text-center">
+      <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-up">
         <img src="img/club-decor.PNG" class="img-fluid" alt="">
         <h5 class="heading">Decoration for Club</h5>
         <p>We provide club decoration according to your events.</p>
         <button class="button">Enquire Now</button>
       </div>
-      <div class="col-6 col-md-6 col-lg-3 card text-center">
+      <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-down">
         <img src="img/church-decor.PNG" class="img-fluid" alt="">
         <h5 class="heading">Decoration for Church</h5>
         <p>We decorate your church space where your events are organized.</p>
         <button class="button">Enquire Now</button>
       </div>
-      <div class="col-6 col-md-6 col-lg-3 card text-center">
+      <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-up">
         <img src="img/hotel-decor.PNG" class="img-fluid" alt="">
         <h5 class="heading">Decoration for Hotel</h5>
         <p>We decorate your wedding venue and space according to your choice.</p>
         <button class="button">Enquire Now</button>
       </div>
-      <div class="col-6 col-md-6 col-lg-3 card text-center">
+      <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-down">
         <img src="img/services-3.PNG" class="img-fluid" alt="">
         <h5 class="heading">Decoration for Marriage</h5>
         <p>We decorate your wedding venue and space according to your choice.</p>
@@ -276,15 +276,15 @@
   </div>
   <!-- services section end -->
   <!-- contact us section start  -->
-  <h1 class="headings " id="contact">Contact Us</h1>
+  <h1 class="headings " id="contact" data-aos="zoom-in">Contact Us</h1>
 
   <div class="container-fluid" style="background-color: brown;">
     <div class="row">
-      <div class="col-12 col-md-6 col-lg-6 p-2"><iframe
+      <div class="col-12 col-md-6 col-lg-6 p-2" data-aos="fade-right"><iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3322.6131971947552!2d73.13331767462043!3d33.61533927332453!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfeb03c037ef27%3A0x5727512f276fd339!2sIslamabad%20flower%20world!5e0!3m2!1sen!2s!4v1736538337838!5m2!1sen!2s"
           width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-      <div class="col-12 col-md-6 col-lg-6">
+      <div class="col-12 col-md-6 col-lg-6" data-aos="fade-left">
         <form id="form" class="form">
           <br><br>  <input type="email" placeholder="Enter Your Email" required name="email" id="username">
        <br><br>   <input type="password" placeholder="Enter Your Password" required name="password" id="password">
