--- a/index.html
+++ b/index.html
@@ -77,29 +77,47 @@
   <div class="container category">
     <h1 class="headings " id="category" data-aos="zoom-in">Categories</h1>
     <div class="row mt-5">
-      <div class="col-4 text-center"><img height="200px" width="200px" class="img-fluid" src="img/category-1.PNG" data-aos="zoom-in"
+      <div class="col-4 text-center">
+        <a href="https://diversity.pk/products/natural-dried-flower-bouquet" target="_blank">
+          <img height="200px" width="200px" class="img-fluid" src="img/category-1.PNG" data-aos="zoom-in"
           alt="">
+        </a>
         <h4>Dry Flowers</h4>
       </div>
-      <div class="col-4 text-center"><img height="150px" width="200px" class="img-fluid" src="img/category-2.PNG" data-aos="zoom-out-down"
+      <div class="col-4 text-center">
+        <a href="https://www.etsy.com/c/home-and-living/home-decor/wreaths-and-door-hangers/wreaths?msockid=2afa7ab7f4f7696e37fc690ef5dd685c" target="_blank">
+          <img height="150px" width="200px" class="img-fluid" src="img/category-2.PNG" data-aos="zoom-out-down"
           alt="">
+        </a>
         <h4>Wreath</h4>
       </div>
-      <div class="col-4 text-center"><img height="50px" width="200px" class="img-fluid" src="img/category-6.PNG" data-aos="zoom-in" alt="">
+      <div class="col-4 text-center">
+        <a href=" https://www.giftoo.com.pk/product/fresh-flowers-basket-2/" target="_blank">
+          <img height="50px" width="200px" class="img-fluid" src="img/category-6.PNG" data-aos="zoom-in" alt="">
+        </a>
         <h4>Flower Basket</h4>
       </div>
     </div>
 
     <div class="row mt-5">
-      <div class="col-4 text-center"><img height="200px" width="200px" class="img-fluid" src="img/category-4.PNG" data-aos="zoom-out-down"
+      <div class="col-4 text-center">
+        <a href="https://www.gardenia.net/plants/plant-types" target="_blank">
+          <img height="200px" width="200px" class="img-fluid" src="img/category-4.PNG" data-aos="zoom-out-down"
           alt="">
+        </a>
         <h4>Flower Plants</h4>
       </div>
-      <div class="col-4 text-center"><img height="150px" width="200px" class="img-fluid" src="img/category-5.PNG" data-aos="zoom-in"
+      <div class="col-4 text-center">
+        <a href="https://www.sianvictoria.com/blog/guide-to-different-types-of-flower-bouquets-arrangements-design" target="_blank">
+          <img height="150px" width="200px" class="img-fluid" src="img/category-5.PNG" data-aos="zoom-in"
           alt="">
+        </a>
         <h4>Bouquets</h4>
       </div>
-      <div class="col-4 text-center"><img height="50px" width="200px" class="img-fluid" src="img/category-3.PNG" data-aos="zoom-out-down" alt="">
+      <div class="col-4 text-center">
+        <a href="https://www.pinterest.com/pin/2251868557630683/" target="_blank">
+          <img height="50px" width="200px" class="img-fluid" src="img/category-3.PNG" data-aos="zoom-out-down" alt="">
+        </a>
         <h4>Fresh Flowers</h4>
       </div>
     </div>
@@ -110,14 +128,14 @@
     <h1 class="headings " id="product"  data-aos="zoom-in">Products</h1>
     <div class="row">
       <div class="col-4 col-md-3 col-lg-2 p-4" data-aos="fade-up">
-        <img src="img/red-rose.PNG" class="img-fluid" alt="">
+       <a href="https://www.stylecraze.com/articles/most-beautiful-red-roses/" target="_blank"> <img src="img/red-rose.PNG" class="img-fluid" alt=""></a>
         <p style="font-size: small;">Red Rose Bouquet</p>
         <span><b>$95</b></span><br>
         <button class="button"><i class="fa-solid fa-cart-shopping"></i>&nbsp; Add</button>
 
       </div>
       <div class="col-4 col-md-3 col-lg-2 p-4" data-aos="fade-down">
-        <img src="img/classic.PNG" class="img-fluid" alt="">
+       <a href="https://theflowercatalogue.com/products/the-classic-bouquet" target="_blank"><img src="img/classic.PNG" class="img-fluid" alt=""></a> 
         <p style="font-size: small;">Classic Bouquet</p>
         <span><b>$75</b></span><br>
         <button class="button"><i class="fa-solid fa-cart-shopping"></i>&nbsp; Add</button>
@@ -125,14 +143,20 @@
       </div>
 
       <div class="col-4 col-md-3 col-lg-2  p-4" data-aos="fade-up">
-        <img src="img/fresh-flower.PNG" class="img-fluid" alt="">
+<a href="https://www.pinterest.com/pin/2251868557630683/" target="_blank">
+  <img src="img/fresh-flower.PNG" class="img-fluid" alt="">
+
+</a>
         <p style="font-size: small;">Fresh Flowers</p>
         <span><b>$95</b></span><br>
         <button class="button"><i class="fa-solid fa-cart-shopping"></i>&nbsp; Add</button>
 
       </div>
       <div class="col-4 col-md-3 col-lg-2  p-4" data-aos="fade-down">
-        <img src="img/tulip.PNG" class="img-fluid" alt="">
+<a href="https://www.flowerglossary.com/types-of-tulips/" target="_blank">
+  <img src="img/tulip.PNG" class="img-fluid" alt="">
+
+</a>
         <p style="font-size: small;">Tulip Flowers</p>
         <span><b>$115</b></span><br>
         <button class="button"><i class="fa-solid fa-cart-shopping"></i>&nbsp; Add</button>
@@ -140,7 +164,10 @@
       </div>
 
       <div class="col-4 col-md-3 col-lg-2  p-4" data-aos="fade-up">
-        <img src="img/art-daffodil.PNG" class="img-fluid" alt=""><br>
+<a href="https://www.etsy.com/market/artificial_daffodils?msockid=2afa7ab7f4f7696e37fc690ef5dd685c" target="_blank">
+  <img src="img/art-daffodil.PNG" class="img-fluid" alt=""><br>
+
+</a>
         <p style="font-size: small;">Artificial Daffodil</p>
         <span><b>$105</b></span><br>
         <button class="button"><i class="fa-solid fa-cart-shopping"></i>&nbsp; Add</button>
@@ -148,7 +175,10 @@
       </div>
 
       <div class="col-4 col-md-3 col-lg-2  p-4" data-aos="fade-down">
-        <img src="img/pink.PNG" class="img-fluid" alt="">
+<a href="https://worstroom.com/types-of-protea/" target="_blank">
+  <img src="img/pink.PNG" class="img-fluid" alt="">
+
+</a>
         <p style="font-size: small;"> Proteas Flowers</p>
         <span><b>$95</b></span><br>
         <button class="button"><i class="fa-solid fa-cart-shopping"></i>&nbsp; Add</button>
@@ -249,7 +279,7 @@
     <div class="row mt-5">
       <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-up">
         <img src="img/club-decor.PNG" class="img-fluid" alt="">
-        <h5 class="heading">Decoration for Club</h5>
+        <h5 class="heading">Decoration for Anniversary</h5>
         <p>We provide club decoration according to your events.</p>
         <button class="button">Enquire Now</button>
       </div>
@@ -261,7 +291,7 @@
       </div>
       <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-up">
         <img src="img/hotel-decor.PNG" class="img-fluid" alt="">
-        <h5 class="heading">Decoration for Hotel</h5>
+        <h5 class="heading">Decoration for Birthday</h5>
         <p>We decorate your wedding venue and space according to your choice.</p>
         <button class="button">Enquire Now</button>
       </div>
@@ -286,11 +316,13 @@
           referrerpolicy="no-referrer-when-downgrade"></iframe></div>
       <div class="col-12 col-md-6 col-lg-6" data-aos="fade-left">
         <form id="form" class="form">
-          <br><br>  <input type="email" placeholder="Enter Your Email" required name="email" id="username">
-       <br><br>   <input type="password" placeholder="Enter Your Password" required name="password" id="password">
-       <br><br>  <input type="number" placeholder="Enter Your Number required" name="num" id="num">
+          <br><br>  <input type="email" placeholder="Enter Your Email"  name="email" id="username">
+       <br><br>   <input type="password" placeholder="Enter Your Password"  name="password" id="password">
+       <br><br>  <input type="number" placeholder="Enter Your Number " name="num" id="num">
           &nbsp; <textarea name="" placeholder="Message" class="w-100" id=""></textarea>
           <br><br> <input type="submit" id="message" onclick="sendMessage()" value="Send Message">
+          <br><br> <a href="mailto:rimsha2409d@aptechgdn.net" id="email-btn">Send Email</a>
+      <br><br>
         </form>
       </div>
     </div>
