--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>The Flower World</title>
+  <link rel="shortcut icon" href="img/download__1_-removebg-preview.png" type="image/x-icon">
   <link rel="stylesheet" href="./textillate-master/textillate-master/assets/animate.css">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -251,26 +252,34 @@
     <h1 class="headings " id="service"  data-aos="zoom-in">Services</h1>
     <div class="row">
       <div class="col-6 col-md-6 col-lg-3  card text-center" data-aos="fade-up">
-        <img src="img/service-1.PNG" class="img-fluid" alt="">
+<a href="https://www.pinterest.com/dmarjelsmith/banquet-hall-decorations-and-ideas/" target="_blank">
+  <img src="img/service-1.PNG" class="img-fluid" alt="">
+</a>
         <h5 class="heading">Decoration for Banquet Hall</h5>
         <p>Be it any occasion, we have amazing ideas to decorate banquet halls.</p>
         <button class="button">Enquire Now</button>
       </div>
       <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-down">
-        <img src="img/service-2.PNG" class="img-fluid" alt="">
+<a href="https://nikaah.pk/wedding-car-decoration-ideas/" target="_blank">
+  <img src="img/service-2.PNG" class="img-fluid" alt="">
+</a>
         <h5 class="heading">Decoration for Cars</h5>
         <p>We decorate your cars beautifully that it looks just the way you want.</p>
         <button class="button">Enquire Now</button>
       </div>
       <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-up">
-        <img src="img/dryflower-decor.PNG" class="img-fluid" alt="">
+<a href="https://www.ohohdeco.com/dried-flowers-ideas/" target="_blank">
+  <img src="img/dryflower-decor.PNG" class="img-fluid" alt="">
+</a>
         <h5 class="heading">Decoration for Dry Flowers</h5>
         <p>We provide unique concept of dry flower decoration also.</p>
         <button class="button">Enquire Now</button>
       </div>
 
       <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-down">
-        <img src="img/service-4.PNG" class="img-fluid" alt="">
+<a href="https://laughlore.com/stage-decoration-ideas/" target="_blank">
+  <img src="img/service-4.PNG" class="img-fluid" alt="">
+</a>
         <h5 class="heading">Decoration for Stage</h5>
         <p>We also provide stage decoration services for all your events.</p>
         <button class="button">Enquire Now</button>
@@ -278,25 +287,33 @@
     </div>
     <div class="row mt-5">
       <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-up">
-        <img src="img/club-decor.PNG" class="img-fluid" alt="">
+<a href="https://www.theknot.com/content/anniversary-party-decorations" target="_blank">
+  <img src="img/club-decor.PNG" class="img-fluid" alt="">
+</a>
         <h5 class="heading">Decoration for Anniversary</h5>
         <p>We provide club decoration according to your events.</p>
         <button class="button">Enquire Now</button>
       </div>
       <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-down">
-        <img src="img/church-decor.PNG" class="img-fluid" alt="">
+<a href="https://kreafolk.com/blogs/inspirations/church-interior-design" target="_blank">
+  <img src="img/church-decor.PNG" class="img-fluid" alt="">
+</a>
         <h5 class="heading">Decoration for Church</h5>
         <p>We decorate your church space where your events are organized.</p>
         <button class="button">Enquire Now</button>
       </div>
       <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-up">
-        <img src="img/hotel-decor.PNG" class="img-fluid" alt="">
+<a href="https://ahaslides.com/blog/simple-birthday-decoration-ideas-at-home/" target="_blank">
+  <img src="img/hotel-decor.PNG" class="img-fluid" alt="">
+</a>
         <h5 class="heading">Decoration for Birthday</h5>
         <p>We decorate your wedding venue and space according to your choice.</p>
         <button class="button">Enquire Now</button>
       </div>
       <div class="col-6 col-md-6 col-lg-3 card text-center" data-aos="fade-down">
-        <img src="img/services-3.PNG" class="img-fluid" alt="">
+<a href="https://www.theknot.com/content/wedding-ceremony-decoration-ideas" target="_blank">
+  <img src="img/services-3.PNG" class="img-fluid" alt="">
+</a>
         <h5 class="heading">Decoration for Marriage</h5>
         <p>We decorate your wedding venue and space according to your choice.</p>
         <button class="button">Enquire Now</button>
