--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
        <br><br>  <input type="number" placeholder="Enter Your Number " name="num" id="num">
           &nbsp; <textarea name="" placeholder="Message" class="w-100" id=""></textarea>
           <br><br> <input type="submit" id="message" onclick="sendMessage()" value="Send Message">
-          <br><br> <a href="mailto:rimsha2409d@aptechgdn.net" id="email-btn">Send Email</a>
+         <a href="mailto:rimsha2409d@aptechgdn.net" id="email-btn">Send Email</a>
       <br><br>
         </form>
       </div>
