--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12 col-md-6 col-lg-6  order-2 order-md-1 order-lg-1 text-center main-h1">
-        <h1 class="text">Exclusive Range of <br><span id="home">Handpicked Flowers</span></h1>
+        <h1 class="text" style="color: black !important;">Exclusive Range of Handpicked Flowers</h1>
       </div>
       <div class="col-12 col-md-6 col-lg-6 order-1 order-md-2 order-lg-2" data-aos="zoom-in"><img class="img-fluid" src="img/banner.PNG"
           alt=""></div>
@@ -345,6 +345,57 @@
     </div>
 
   </div>
+
+  <div class="container-fluid footer  bg-light text-dark pt-3 ">
+    <div class="row pt-3 p-5 mt-5">
+<div class="col-12 col-md-6 col-lg-2">
+<h2 class="headings " style="font-size: x-large;text-align: left;margin-bottom: 10px;">Top Products</h2>
+<p>Managed Website</p>
+<p>Manage Reputation</p>
+<p>Power Tools</p>
+<p>Marketing Service</p>
+<p></p>
+</div>
+<div class="col-12 col-md-6 col-lg-2">
+<h2 class="headings " style="font-size: x-large;text-align: left;margin-bottom: 10px;">Quick Links</h2>
+<p>Jobs</p>
+<p>Brand Assets</p>
+<p>Investor Relations</p>
+<p>Term of Service</p>
+</div>
+<div class="col-12 col-md-6 col-lg-2">
+<h2 class="headings " style="font-size: x-large;text-align: left;margin-bottom: 10px;">Features</h2>
+<p>Jobs</p>
+<p>Brand Assets</p>
+<p>Investor Relations</p>
+<p>Term of Service</p>
+</div>
+<div class="col-12 col-md-6 col-lg-2">
+<h2 class="headings " style="font-size: x-large;text-align: left;margin-bottom: 10px;">Resources</h2>
+<p>Guides</p>
+<p>Research</p>
+<p>Experts</p>
+<p>Agencies</p>
+</div>
+<div class="col-12 col-md-12 col-lg-4 foo-input">
+<h2 class="headings " style="font-size: x-large;text-align: left;margin-bottom: 10px;">Newsletter</h2>
+<p>You can trust us. we only send promo offers,    </p>
+<input type="email" placeholder="Your Email Address" name="" id=""><button>SUBSCRIBE</button>
+</div>
+</div>
+<div class="row p-5 d-flex justify-content-around">
+<div class="col-12 col-md-6 col-lg-9">
+    <p>Copyright ©2024 All rights reserved | This template is made with  by <span style="color: goldenrod;">Florita Team</span>
+    </p>
+</div>
+<div class="col-12 col-md-6 col-lg-3 text-center foo-icon">
+    <i class="fa-brands fa-facebook-f"></i>&nbsp;
+    <i class="fa-brands fa-twitter"></i> &nbsp;<i class="fa-solid fa-globe"></i> &nbsp;
+    <i class="fa-brands fa-behance"></i>
+
+</div>
+</div>
+ </div>
   <!-- contact us section end -->
 
 </body>
